--- a/covid19_update.ipynb
+++ b/covid19_update.ipynb
@@ -6,10 +6,9 @@
    "source": [
     "# COVID19 update\n",
     "+ based on https://github.com/CSSEGISandData/COVID-19/tree/master/archived_data from John Hopkins University\n",
+    "+ Original source: https://www.who.int/emergencies/diseases/novel-coronavirus-2019/situation-reports\n",
     "+ A very good article with a lot of insights is here\n",
-    " https://medium.com/@tomaspueyo/coronavirus-act-today-or-people-will-die-f4d3d9cd99ca\n",
-    "\n",
-    "mbello@bufferworkshop.com"
+    " https://medium.com/@tomaspueyo/coronavirus-act-today-or-people-will-die-f4d3d9cd99ca\n"
    ]
   },
   {
@@ -552,7 +551,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
