--- a/covid19_update.ipynb
+++ b/covid19_update.ipynb
@@ -50,6 +50,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# https://github.com/CSSEGISandData/COVID-19/tree/master/csse_covid_19_data/csse_covid_19_time_series"
    ]
   },
@@ -242,7 +252,10 @@
     "        s_predict= pd.Series(val_predict, t_predict)\n",
     "        return count[-days_back:], s_predict\n",
     "\n",
+    "    \n",
     "    data, predicted = compute_prediction(m_series, days_forward, days_back)\n",
+    "    display(Markdown('### Predicted {0} in {1} days is {2:.0f} in {3}'.format(series_label, \n",
+    "                                                                          days_forward, predicted[-1], location_label)))\n",
     "    plt.figure(figsize = (12,8))\n",
     "    data.plot(label = 'data', marker = '*')\n",
     "    predicted.plot(label = 'predicted')\n",
@@ -305,6 +318,7 @@
    "source": [
     "# country = 'Korea, South'\n",
     "country = 'Italy'\n",
+    "country = 'US'\n",
     "\n",
     "location_label = country\n",
     "location_dir = location_label.replace(',','').replace(\"'\", '')\n",
@@ -483,7 +497,9 @@
    "outputs": [],
    "source": [
     "total_confirmed = df_confirmed_all.sum()[2:]\n",
-    "total_deaths = df_deaths_all.sum()[2:]"
+    "total_confirmed = total_confirmed[total_confirmed > 1]\n",
+    "total_deaths = df_deaths_all.sum()[2:]\n",
+    "total_deaths = total_deaths[total_deaths>1]"
    ]
   },
   {
