added a model description

--- a/covid19_update.ipynb
+++ b/covid19_update.ipynb
@@ -8,7 +8,8 @@
     "+ based on https://github.com/CSSEGISandData/COVID-19/tree/master/archived_data from John Hopkins University\n",
     "+ Original source: https://www.who.int/emergencies/diseases/novel-coronavirus-2019/situation-reports\n",
     "+ A very good article with a lot of insights is here\n",
-    " https://medium.com/@tomaspueyo/coronavirus-act-today-or-people-will-die-f4d3d9cd99ca\n"
+    " https://medium.com/@tomaspueyo/coronavirus-act-today-or-people-will-die-f4d3d9cd99ca\n",
+    "+ Map: https://coronavirus.jhu.edu/map.html\n"
    ]
   },
   {
@@ -195,9 +196,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def model_func(x, a):\n",
-    "    return np.exp(a*x)\n",
+    "    return np.exp(a*x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "\n",
     "def coeff_evaluate_mean(m_series, days_back):\n",
     "    av_alpha = m_series['d(log(count))/dt'][-days_back:].mean()\n",
@@ -283,7 +300,8 @@
     "work_dir = r'c:\\tmp'\n",
     "day_count = 7\n",
     "days_back = day_count\n",
-    "days_forward = 14"
+    "days_back = 10\n",
+    "days_forward = 7"
    ]
   },
   {
@@ -318,7 +336,8 @@
    "source": [
     "# country = 'Korea, South'\n",
     "country = 'Italy'\n",
-    "country = 'US'\n",
+    "# country = 'US'\n",
+    "# country = 'United Kingdom'\n",
     "\n",
     "location_label = country\n",
     "location_dir = location_label.replace(',','').replace(\"'\", '')\n",
@@ -354,7 +373,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Derivative of a logarithm of an exponential function $confirmed = c\\exp(\\alpha t)$ is $\\alpha$. An estimate of how much the population of confirmed cases increases daily is $\\exp(\\bar \\alpha)$ where $\\bar \\alpha$ is the average value of $\\alpha$"
+    "Derivative of a logarithm of an exponential function $confirmed = c\\exp(\\alpha t)$ is $\\alpha$. An estimate of how much the population of confirmed cases increases daily is $\\exp(\\bar \\alpha)$ where $\\bar \\alpha$ is the average value of $\\alpha$\n",
+    "\n",
+    "This is a rough estimate. A better estimate is done in \"Predictions\" section and is based on the best fit of exponential funtion"
    ]
   },
   {
@@ -378,7 +399,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Show fit. Use it to assess how reasonable the prediction is going to be"
+    "### Show fit. Use it to assess how reasonable the prediction is going to be\n",
+    "#### Why using exp as a fitting function is a good idea is explaned in accompanying notebook: SIT_Model_simplified.ipynb"
    ]
   },
   {
@@ -389,6 +411,17 @@
    "source": [
     "coeff, params = coeff_evaluate_bestfit(m_series, days_back)\n",
     "pd.DataFrame({'raw data': params['data'], 'fitted': params['fitted']}).plot(grid = True, title = 'best fit')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "params"
    ]
   },
   {
