--- a/covid19_update.ipynb
+++ b/covid19_update.ipynb
@@ -252,10 +252,10 @@
     "    return day_factor, week_factor, projected_week\n",
     "\n",
     "def display_factors(day_factor, week_factor, projected_week, series_label, location_label):\n",
-    "    print ('Every week the number of {2} increases by a factor of {0} in {1}'.format(week_factor, \n",
+    "    print ('Every week the number of {2} increases roughly by a factor of {0:.1f} in {1}'.format(week_factor, \n",
     "                                                                                     location_label, series_label))\n",
-    "    display(Markdown('### projected number of {0} one week from now is {1:.0f} in {2}'.format(series_label, \n",
-    "                                                        projected_week, location_label)))\n",
+    "#     display(Markdown('### projected number of {0} one week from now is {1:.0f} in {2}'.format(series_label, \n",
+    "#                                                         projected_week, location_label)))\n",
     "\n",
     "def show_prediction(m_series, series_label, location_label, days_back, days_forward):\n",
     "    def compute_prediction(m_series, days_forward, days_back):\n",
@@ -300,7 +300,7 @@
     "work_dir = r'c:\\tmp'\n",
     "day_count = 7\n",
     "days_back = day_count\n",
-    "days_back = 10\n",
+    "days_back = 7\n",
     "days_forward = 7"
    ]
   },
@@ -311,7 +311,28 @@
    "outputs": [],
    "source": [
     "last_update = DataColumnsDT[-1]\n",
-    "last_update = str(pd.Timestamp(last_update)).split(' ')[0]"
+    "last_update = str(pd.Timestamp(last_update)).split(' ')[0]\n",
+    "last_update_dir = os.path.join(work_dir, 'covid19', last_update)\n",
+    "os.makedirs(last_update_dir, exist_ok = True)\n",
+    "print (last_update_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Save dataframes locally"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_confirmed_all.to_csv(os.path.join(last_update_dir, 'confirmed_{0}.csv'.format(last_update)), index = False)\n",
+    "df_recovered_all.to_csv(os.path.join(last_update_dir, 'recovered_{0}.csv'.format(last_update)), index = False)\n",
+    "df_deaths_all.to_csv(os.path.join(last_update_dir, 'deaths_{0}.csv'.format(last_update)), index = False)"
    ]
   },
   {
@@ -320,6 +341,13 @@
    "source": [
     "## Selection"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -341,7 +369,7 @@
     "\n",
     "location_label = country\n",
     "location_dir = location_label.replace(',','').replace(\"'\", '')\n",
-    "fig_dir = os.path.join(work_dir, 'covid19', last_update, location_dir)\n",
+    "fig_dir = os.path.join(last_update_dir, location_dir)\n",
     "os.makedirs(fig_dir, exist_ok = True)\n",
     "print (fig_dir)"
    ]
