Added finer grid to prediction chart

--- a/covid19_update.ipynb
+++ b/covid19_update.ipynb
@@ -39,6 +39,8 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "from matplotlib.ticker import (MultipleLocator, FormatStrFormatter,\n",
+    "                               AutoMinorLocator)\n",
     "from scipy.optimize import curve_fit\n",
     "from IPython.display import display, Markdown\n",
     "import collections\n",
@@ -256,7 +258,6 @@
     "                                                                                     location_label, series_label))\n",
     "#     display(Markdown('### projected number of {0} one week from now is {1:.0f} in {2}'.format(series_label, \n",
     "#                                                         projected_week, location_label)))\n",
-    "\n",
     "def show_prediction(m_series, series_label, location_label, days_back, days_forward):\n",
     "    def compute_prediction(m_series, days_forward, days_back):\n",
     "        total_days = days_forward + days_back\n",
@@ -273,10 +274,13 @@
     "    data, predicted = compute_prediction(m_series, days_forward, days_back)\n",
     "    display(Markdown('### Predicted {0} in {1} days is {2:.0f} in {3}'.format(series_label, \n",
     "                                                                          days_forward, predicted[-1], location_label)))\n",
-    "    plt.figure(figsize = (12,8))\n",
+    "    plt.figure(figsize = (12,6))\n",
     "    data.plot(label = 'data', marker = '*')\n",
     "    predicted.plot(label = 'predicted')\n",
-    "    plt.grid(True)\n",
+    "    ax = plt.gca()\n",
+    "    ax.yaxis.set_minor_locator(AutoMinorLocator(2))\n",
+    "    ax.yaxis.grid(True, which='both') \n",
+    "    ax.xaxis.grid(True, which='both') \n",
     "    title = 'best fit prediction {0} days forward for {1} in {2} as of {3}'.format(days_forward, \n",
     "                                                                         series_label, location_label, last_update)\n",
     "    plt.title(title)\n",
@@ -364,7 +368,7 @@
    "source": [
     "# country = 'Korea, South'\n",
     "country = 'Italy'\n",
-    "# country = 'US'\n",
+    "country = 'US'\n",
     "# country = 'United Kingdom'\n",
     "\n",
     "location_label = country\n",
@@ -451,13 +455,6 @@
    "source": [
     "params"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
