County/Region selection, ylim for log derivative
Merged John's changes for region selection and made better ylim for the log derivative

--- a/covid19_update.ipynb
+++ b/covid19_update.ipynb
@@ -181,6 +181,8 @@
     "        plt.subplot(plot_index)\n",
     "        title = '{0} {1}'.format(series_label, key)\n",
     "        series.plot(grid = True, title = title)\n",
+    "        if 'd(log' in key:\n",
+    "            plt.ylim(0,0.5)\n",
     "    fpath = os.path.join(save_fig_dir, '{0}.png'.format(stitle))\n",
     "    print(fpath)\n",
     "    fig1 = plt.gcf()\n",
@@ -190,7 +192,18 @@
     "    v,t = m_series['count'][-1], m_series['count'].index[-1]\n",
     "    s = '### Latest number of {0} in {1} is *{2}* as of {3}'.format(series_label, location_label, v,t )\n",
     "    display(Markdown(s))\n",
-    "    return\n"
+    "    return\n",
+    "\n",
+    "def display_percentage_chart(df_numerator, df_denominator, metric, selection_location, save_fig_dir = '.'):\n",
+    "    numerator = df_numerator[DataColumns].sum(axis = 0)\n",
+    "    denominator = df_denominator[DataColumns].sum(axis = 0)\n",
+    "    (numerator/denominator*100).plot()\n",
+    "    stitle = '{0} rate % in {1}'.format(metric, selection_location)\n",
+    "    plt.title(stitle)\n",
+    "    plt.grid()\n",
+    "    fpath1 = os.path.join(save_fig_dir, '{0}.png'.format(stitle))\n",
+    "    plt.savefig(fpath1)\n",
+    "    return"
    ]
   },
   {
@@ -357,7 +370,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Country: pick one from the list of the countries above"
+    "<b> Select Location (remember to set </b><i>bUseCountry</i><b> boolean flag to proper value):\n",
+    "    \n",
+    "    Country: pick one from the list of the countries above\n",
+    "             - OR - \n",
+    "    Province/State:  pick one from the list of states/counties above </b>"
    ]
   },
   {
@@ -366,12 +383,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "bUseCountry = False\n",
+    "\n",
     "# country = 'Korea, South'\n",
     "country = 'Italy'\n",
+    "country = 'Iran'\n",
     "country = 'US'\n",
-    "# country = 'United Kingdom'\n",
+    "country = 'United Kingdom'\n",
     "\n",
-    "location_label = country\n",
+    "prov_state = 'Massachusetts'\n",
+    "prov_state = 'California'\n",
+    "#prov_state = 'Florida'\n",
+    "\n",
+    "if (bUseCountry):\n",
+    "    location_label = country\n",
+    "else:\n",
+    "    location_label = prov_state\n",
+    "\n",
     "location_dir = location_label.replace(',','').replace(\"'\", '')\n",
     "fig_dir = os.path.join(last_update_dir, location_dir)\n",
     "os.makedirs(fig_dir, exist_ok = True)\n",
@@ -384,7 +412,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selection = df_confirmed_all['Country/Region'] == country\n",
+    "if (bUseCountry):\n",
+    "    selection = df_confirmed_all['Country/Region'] == country\n",
+    "else:\n",
+    "    selection = df_confirmed_all['Province/State'] == prov_state\n",
+    "\n",
     "df_confirmed = df_confirmed_all[selection]\n",
     "df_recovered = df_recovered_all[selection]\n",
     "df_deaths    = df_deaths_all[selection]"
@@ -489,6 +521,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "display_percentage_chart(df_deaths, df_confirmed, \"Death\", location_label, fig_dir)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "day_factor, week_factor, projected_week = multi_factors(m_series, coeff_evaluate_bestfit)\n",
     "display_factors(day_factor, week_factor, projected_week, series_label, location_label)"
    ]
@@ -518,6 +559,15 @@
     "series_label = 'recovered'\n",
     "m_series = compute_series(df_recovered)\n",
     "display_series(m_series, series_label, location_label,fig_dir)    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_percentage_chart(df_recovered, df_confirmed, \"Recovered\", location_label, fig_dir)    "
    ]
   },
   {
@@ -582,7 +632,12 @@
     "(total_deaths/total_confirmed*100).plot()\n",
     "title = 'total death rate %'.format(country)\n",
     "plt.title(title)\n",
-    "plt.grid()"
+    "plt.grid()\n",
+    "\n",
+    "stitle = 'Total Case charts for Worldwide as of {0}'.format(last_update )\n",
+    "plt.suptitle(stitle, fontsize = 16)\n",
+    "fpath1 = os.path.join(last_update_dir, '{0}.png'.format(stitle))\n",
+    "plt.savefig(fpath1)"
    ]
   },
   {
