--- a/covid19_update.ipynb
+++ b/covid19_update.ipynb
@@ -41,7 +41,7 @@
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.ticker import (MultipleLocator, FormatStrFormatter,\n",
     "                               AutoMinorLocator)\n",
-    "from scipy.optimize import curve_fit\n",
+    "from scipy.optimize  import curve_fit\n",
     "from IPython.display import display, Markdown\n",
     "import collections\n",
     "import datetime"
@@ -182,7 +182,7 @@
     "        title = '{0} {1}'.format(series_label, key)\n",
     "        series.plot(grid = True, title = title)\n",
     "        if 'd(log' in key:\n",
-    "            plt.ylim(0,0.5)\n",
+    "            plt.ylim(-0.5,0.5)\n",
     "    fpath = os.path.join(save_fig_dir, '{0}.png'.format(stitle))\n",
     "    print(fpath)\n",
     "    fig1 = plt.gcf()\n",
@@ -235,22 +235,7 @@
     "    av_alpha = m_series['d(log(count))/dt'][-days_back:].mean()\n",
     "    return av_alpha, None\n",
     "\n",
-    "def coeff_evaluate_bestfit(m_series, days_back):\n",
-    "    x = np.arange(0, days_back,1)\n",
-    "    y = m_series['count'][-days_back:].values\n",
-    "    y = y/y[0]\n",
-    "    approx, _ = coeff_evaluate_mean(m_series, days_back)\n",
-    "    popt, pcov = curve_fit(model_func, x, y, p0=( approx))\n",
-    "    params = collections.OrderedDict()\n",
-    "    params['days'] = x\n",
-    "    params['data'] = y\n",
-    "    params['fitted'] = model_func(x, popt[0])\n",
-    "    params['popt'] = popt\n",
-    "    params['pcov'] = pcov\n",
-    "    params['approx'] = approx\n",
-    "    return popt[0], params\n",
-    "\n",
-    "def multi_factors(m_series, coeff_evaluate, days_back = 7):\n",
+    "def multi_factors(m_series, coeff_evaluate, days_back = None):\n",
     "    av_alpha, _ = coeff_evaluate(m_series, days_back)\n",
     "    count = m_series['count']\n",
     "    day_factor = np.exp(av_alpha)\n",
@@ -273,9 +258,11 @@
     "#                                                         projected_week, location_label)))\n",
     "def show_prediction(m_series, series_label, location_label, days_back, days_forward):\n",
     "    def compute_prediction(m_series, days_forward, days_back):\n",
+    "        coeff, params = coeff_evaluate_bestfit(m_series, days_back)\n",
+    "        days_back = params['days_back']\n",
+    "\n",
     "        total_days = days_forward + days_back\n",
     "        count = m_series['count']\n",
-    "        coeff, _ = coeff_evaluate_bestfit(m_series, days_back)\n",
     "        t0, v0 = count.index[-days_back], count[-days_back]\n",
     "        t_predict = pd.date_range(t0, periods = total_days)\n",
     "        tmp = np.arange(0,total_days)\n",
@@ -302,6 +289,53 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def coeff_evaluate_bestfit(m_series, days_back = None):\n",
+    "    if days_back is None:\n",
+    "        days = [10,9,8,7,6,5,4]\n",
+    "        r2min = 1e10\n",
+    "        dbmin = -1\n",
+    "        for db in days:\n",
+    "            _, params = evaluate_bestfit(m_series, db)\n",
+    "            r2 = params['r2']\n",
+    "            if r2 < r2min:\n",
+    "                r2min = r2\n",
+    "                dbmin = db\n",
+    "        _, params = evaluate_bestfit(m_series, dbmin)\n",
+    "        params['days_back'] = dbmin      \n",
+    "    else:\n",
+    "        _, params = evaluate_bestfit(m_series, days_back)\n",
+    "        params['days_back'] = days_back\n",
+    "    return params['popt'][0], params\n",
+    "\n",
+    "def evaluate_bestfit(m_series, days_back):\n",
+    "    x = np.arange(0, days_back,1)\n",
+    "    y = m_series['count'][-days_back:].values\n",
+    "    y = y/y[0]\n",
+    "    approx, _ = coeff_evaluate_mean(m_series, days_back)\n",
+    "    popt, pcov = curve_fit(model_func, x, y, p0=( approx))\n",
+    "    fitted = model_func(x, popt[0])\n",
+    "    r2 = np.sum( (y - fitted)**2)/(np.sqrt(np.sum(y**2))*np.sqrt(np.sum(fitted**2))) \n",
+    "#             approx, _ = coeff_evaluate_mean(m_series, days_back)\n",
+    "#             popt, pcov = curve_fit(model_func, x, y, p0=( approx))\n",
+    "#             fitted = model_func(x, popt[0])\n",
+    "#             r2 = np.sum( (y - fitted)**2)/(np.sqrt(np.sum(y**2))*np.sqrt(np.sum(fitted**2)))\n",
+    "    params = collections.OrderedDict()\n",
+    "    params['days'] = x\n",
+    "    params['data'] = y\n",
+    "    params['fitted'] = fitted\n",
+    "    params['popt'] = popt\n",
+    "    params['pcov'] = pcov\n",
+    "    params['approx'] = approx\n",
+    "    params['r2'] = r2  \n",
+    "    return popt[0], params\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -315,9 +349,6 @@
    "outputs": [],
    "source": [
     "work_dir = r'c:\\tmp'\n",
-    "day_count = 7\n",
-    "days_back = day_count\n",
-    "days_back = 7\n",
     "days_forward = 7"
    ]
   },
@@ -383,13 +414,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bUseCountry = False\n",
+    "bUseCountry = True\n",
     "\n",
     "# country = 'Korea, South'\n",
     "country = 'Italy'\n",
-    "country = 'Iran'\n",
-    "country = 'US'\n",
-    "country = 'United Kingdom'\n",
+    "# country = 'Iran'\n",
+    "# country = 'US'\n",
+    "# country = 'United Kingdom'\n",
     "\n",
     "prov_state = 'Massachusetts'\n",
     "prov_state = 'California'\n",
@@ -464,7 +495,7 @@
    "metadata": {},
    "source": [
     "### Show fit. Use it to assess how reasonable the prediction is going to be\n",
-    "#### Why using exp as a fitting function is a good idea is explaned in accompanying notebook: SIT_Model_simplified.ipynb"
+    "#### Why using exp as a fitting function is a good idea is explaned in accompanying notebook: SIR_Model_simplified.ipynb"
    ]
   },
   {
@@ -473,28 +504,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "coeff, params = coeff_evaluate_bestfit(m_series, days_back)\n",
+    "\n",
+    "coeff, params = coeff_evaluate_bestfit(m_series, None)\n",
+    "print ('r2  = {0}, days_back = {1}'.format( params['r2'], params['days_back']))\n",
     "pd.DataFrame({'raw data': params['data'], 'fitted': params['fitted']}).plot(grid = True, title = 'best fit')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "params"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "show_prediction(m_series, series_label, location_label, days_back, days_forward)"
+    "# show_prediction(m_series, series_label, location_label, days_back, days_forward)\n",
+    "show_prediction(m_series, series_label, location_label, params['days_back'], days_forward)"
    ]
   },
   {
@@ -540,7 +563,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "show_prediction(m_series, series_label, location_label, days_back, days_forward)"
+    "show_prediction(m_series, series_label, location_label, None, days_forward)"
    ]
   },
   {
@@ -588,7 +611,7 @@
    },
    "outputs": [],
    "source": [
-    "show_prediction(m_series, series_label, location_label, days_back, days_forward)"
+    "show_prediction(m_series, series_label, location_label, None, days_forward)"
    ]
   },
   {
@@ -639,6 +662,20 @@
     "fpath1 = os.path.join(last_update_dir, '{0}.png'.format(stitle))\n",
     "plt.savefig(fpath1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
