--- a/covid19_update.ipynb
+++ b/covid19_update.ipynb
@@ -116,7 +116,15 @@
     "countries = df_confirmed_all['Country/Region'].unique()\n",
     "countries.sort()\n",
     "display(Markdown('*List of Countries*'))\n",
+    "selectors = ['Country']\n",
     "print(countries)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Country-specific list of counties"
    ]
   },
   {
@@ -124,7 +132,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "what_country = 'US'"
+   ]
   },
   {
    "cell_type": "code",
@@ -132,16 +142,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "us_county_states = df_confirmed_all[df_confirmed_all['Country/Region'] == 'US']['Province/State'].unique()\n",
-    "us_county_states.sort()\n",
-    "display(Markdown('*List of US States*'))\n",
-    "us_states = sorted([rs for rs in us_county_states if not ',' in rs])\n",
-    "print (us_states)\n",
-    "display(Markdown('*List of US Counties*'))\n",
-    "print ( us_county_states)\n",
-    "princesses = sorted([rs for rs in us_county_states if  'Princess' in rs])\n",
-    "display(Markdown('*List of Cruise Ships*'))\n",
-    "print ( princesses)"
+    "try:\n",
+    "    county_states = df_confirmed_all[df_confirmed_all['Country/Region'] == what_country]['Province/State'].unique()\n",
+    "    county_states.sort()\n",
+    "    display(Markdown('*List of {0} States*'.format(what_country)))\n",
+    "    states = sorted([rs for rs in county_states if not ',' in rs])\n",
+    "    print (states)\n",
+    "    display(Markdown('*List of {0} Counties*'.format(what_country)))\n",
+    "    print ( county_states)\n",
+    "    if what_country == 'US':\n",
+    "        princesses = sorted([rs for rs in county_states if  'Princess' in rs])\n",
+    "        display(Markdown('*List of Cruise Ships*'))\n",
+    "        print ( princesses)\n",
+    "except:\n",
+    "    display(Markdown('**No States or Counties presented for {0}**'.format(what_country)))\n",
+    "    pass"
    ]
   },
   {
@@ -170,13 +185,15 @@
     "    m_series['d(log(count))/dt'] = count.diff()/count\n",
     "    return m_series\n",
     "\n",
-    "def display_series(m_series, series_label, selection_location, save_fig_dir = '.'):\n",
+    "def display_series(m_series, series_label, selection_location, save_fig_dir = '.', display_days_back = None):\n",
     "    plt.figure(figsize = (16,10))\n",
     "    stitle = '{0} charts for {1} as of {2}'.format(series_label, selection_location, last_update )\n",
     "    plt.suptitle(stitle, fontsize = 16)\n",
     "    plot_index = 220\n",
     "    for key in m_series.keys():\n",
-    "        series = m_series[key]\n",
+    "        series = m_series[key].copy()\n",
+    "        if not display_days_back is None:\n",
+    "            series = series[-display_days_back:]        \n",
     "        plot_index += 1\n",
     "        plt.subplot(plot_index)\n",
     "        title = '{0} {1}'.format(series_label, key)\n",
@@ -349,7 +366,8 @@
    "outputs": [],
    "source": [
     "work_dir = r'c:\\tmp'\n",
-    "days_forward = 7"
+    "days_forward = 7\n",
+    "display_days_back = 21"
    ]
   },
   {
@@ -395,7 +413,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_confirmed_all.columns[:4]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -414,16 +434,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "selectors = ['Country', 'State', 'County']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "bUseCountry = True\n",
-    "\n",
     "# country = 'Korea, South'\n",
-    "country = 'Italy'\n",
+    "# country = 'Italy'\n",
     "# country = 'Iran'\n",
-    "# country = 'US'\n",
+    "country = 'US'\n",
     "# country = 'United Kingdom'\n",
     "\n",
     "prov_state = 'Massachusetts'\n",
     "prov_state = 'California'\n",
+    "prov_state = 'New York'\n",
     "#prov_state = 'Florida'\n",
     "\n",
     "if (bUseCountry):\n",
@@ -461,7 +490,7 @@
    "source": [
     "series_label = 'confirmed cases'\n",
     "m_series = compute_series(df_confirmed)\n",
-    "display_series(m_series, series_label, location_label, fig_dir)    \n"
+    "display_series(m_series, series_label, location_label, fig_dir, display_days_back)    \n"
    ]
   },
   {
@@ -535,7 +564,7 @@
    "source": [
     "series_label = 'deaths'\n",
     "m_series = compute_series(df_deaths)\n",
-    "display_series(m_series, series_label, location_label,fig_dir)    \n"
+    "display_series(m_series, series_label, location_label,fig_dir, display_days_back)    \n"
    ]
   },
   {
@@ -581,7 +610,7 @@
    "source": [
     "series_label = 'recovered'\n",
     "m_series = compute_series(df_recovered)\n",
-    "display_series(m_series, series_label, location_label,fig_dir)    \n"
+    "display_series(m_series, series_label, location_label,fig_dir, display_days_back)    \n"
    ]
   },
   {
