--- a/covid19_update.ipynb
+++ b/covid19_update.ipynb
@@ -317,6 +317,8 @@
     "        r2min = 1e10\n",
     "        dbmin = -1\n",
     "        for db in days:\n",
+    "            if db > len(m_series):\n",
+    "                continue\n",
     "            _, params = evaluate_bestfit(m_series, db)\n",
     "            r2 = params['r2']\n",
     "            if r2 < r2min:\n",
@@ -409,23 +411,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_confirmed_all.columns[:4]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b> Select Location (remember to set </b><i>bUseCountry</i><b> boolean flag to proper value):\n",
-    "    \n",
+    "<b> Select Location (remember to set </b><i>bUseCountry</i><b> boolean flag to proper value):   \n",
     "    Country: pick one from the list of the countries above\n",
     "             - OR - \n",
-    "    Province/State:  pick one from the list of states/counties above </b>"
+    "    Province/State:  pick one from the list of states/counties above \n",
+    "             - OR -\n",
+    "    County (US Only): Set bUseCountry = True, bUseCounty = True, country = 'US' and assign value to county variable </b>"
    ]
   },
   {
@@ -433,9 +427,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "selectors = ['Country', 'State', 'County']"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -443,22 +435,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bUseCountry = True\n",
+    "bUseCountry = False\n",
+    "bUseCounty = False\n",
     "# country = 'Korea, South'\n",
-    "# country = 'Italy'\n",
+    "country = 'Italy'\n",
     "# country = 'Iran'\n",
     "country = 'US'\n",
     "# country = 'United Kingdom'\n",
     "\n",
     "prov_state = 'Massachusetts'\n",
     "prov_state = 'California'\n",
-    "prov_state = 'New York'\n",
+    "# prov_state = 'New York'\n",
     "#prov_state = 'Florida'\n",
+    "prov_state = 'Louisiana'\n",
+    "\n",
+    "county = 'Santa Clara County, CA'\n",
+    "county = 'New York County, NY'\n",
     "\n",
     "if (bUseCountry):\n",
     "    location_label = country\n",
     "else:\n",
     "    location_label = prov_state\n",
+    "\n",
+    "if bUseCountry and (country == 'US') and bUseCounty:\n",
+    "    location_label = county\n",
+    "\n",
     "\n",
     "location_dir = location_label.replace(',','').replace(\"'\", '')\n",
     "fig_dir = os.path.join(last_update_dir, location_dir)\n",
@@ -476,6 +477,10 @@
     "    selection = df_confirmed_all['Country/Region'] == country\n",
     "else:\n",
     "    selection = df_confirmed_all['Province/State'] == prov_state\n",
+    "\n",
+    "if bUseCountry and (country == 'US') and bUseCounty:\n",
+    "    selection = df_confirmed_all['Province/State'] == county\n",
+    "\n",
     "\n",
     "df_confirmed = df_confirmed_all[selection]\n",
     "df_recovered = df_recovered_all[selection]\n",
@@ -562,6 +567,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "series_label = 'deaths'\n",
     "m_series = compute_series(df_deaths)\n",
     "display_series(m_series, series_label, location_label,fig_dir, display_days_back)    \n"
@@ -609,8 +615,11 @@
    "outputs": [],
    "source": [
     "series_label = 'recovered'\n",
-    "m_series = compute_series(df_recovered)\n",
-    "display_series(m_series, series_label, location_label,fig_dir, display_days_back)    \n"
+    "try:\n",
+    "    m_series = compute_series(df_recovered)\n",
+    "    display_series(m_series, series_label, location_label,fig_dir, display_days_back)  \n",
+    "except:\n",
+    "    pass\n"
    ]
   },
   {
@@ -628,8 +637,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "day_factor, week_factor, projected_week = multi_factors(m_series, coeff_evaluate_bestfit)\n",
-    "display_factors(day_factor, week_factor, projected_week, series_label, location_label)"
+    "try:\n",
+    "    day_factor, week_factor, projected_week = multi_factors(m_series, coeff_evaluate_bestfit)\n",
+    "    display_factors(day_factor, week_factor, projected_week, series_label, location_label)\n",
+    "except:\n",
+    "    pass"
    ]
   },
   {
@@ -640,7 +652,19 @@
    },
    "outputs": [],
    "source": [
-    "show_prediction(m_series, series_label, location_label, None, days_forward)"
+    "try:\n",
+    "    show_prediction(m_series, series_label, location_label, None, days_forward)\n",
+    "except:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "series_label"
    ]
   },
   {
