--- a/covid19_update.ipynb
+++ b/covid19_update.ipynb
@@ -414,12 +414,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b> Select Location (remember to set </b><i>bUseCountry</i><b> boolean flag to proper value):   \n",
+    "<b>Select Location (remember to set </b><i>bUseCountry</i><b> boolean flag to proper value):   \n",
     "    Country: pick one from the list of the countries above\n",
-    "             - OR - \n",
-    "    Province/State:  pick one from the list of states/counties above \n",
     "             - OR -\n",
-    "    County (US Only): Set bUseCountry = True, bUseCounty = True, country = 'US' and assign value to county variable </b>"
+    "Province/State:  pick one from the list of states/counties above \n",
+    "             - OR -\n",
+    "County (US Only): Set </b><i>bUseCountry = True, bUseCounty = True, country = 'US' </i><b>and assign value to county variable "
    ]
   },
   {
