--- a/covid19_update.ipynb
+++ b/covid19_update.ipynb
@@ -435,12 +435,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bUseCountry = False\n",
+    "bUseCountry = True\n",
     "bUseCounty = False\n",
     "# country = 'Korea, South'\n",
     "country = 'Italy'\n",
     "# country = 'Iran'\n",
-    "country = 'US'\n",
+    "# country = 'US'\n",
     "# country = 'United Kingdom'\n",
     "\n",
     "prov_state = 'Massachusetts'\n",
@@ -692,18 +692,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize = (15,6))\n",
-    "plt.subplot(131)\n",
+    "plt.figure(figsize = (12,12))\n",
+    "plt.subplot(311)\n",
     "total_confirmed.plot()\n",
     "title = 'total confirmed'\n",
     "plt.title(title)\n",
     "plt.grid()\n",
-    "plt.subplot(132)\n",
+    "plt.subplot(312)\n",
     "total_deaths.plot()\n",
     "title = 'total deaths'\n",
     "plt.title(title)\n",
     "plt.grid()\n",
-    "plt.subplot(133)\n",
+    "plt.subplot(313)\n",
     "\n",
     "(total_deaths/total_confirmed*100).plot()\n",
     "title = 'total death rate %'.format(country)\n",
@@ -761,7 +761,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
