--- a/covid19_update.ipynb
+++ b/covid19_update.ipynb
@@ -317,7 +317,7 @@
     "        r2min = 1e10\n",
     "        dbmin = -1\n",
     "        for db in days:\n",
-    "            if db > len(m_series):\n",
+    "            if db > len(m_series['count']):\n",
     "                continue\n",
     "            _, params = evaluate_bestfit(m_series, db)\n",
     "            r2 = params['r2']\n",
@@ -438,10 +438,11 @@
     "bUseCountry = True\n",
     "bUseCounty = False\n",
     "# country = 'Korea, South'\n",
-    "country = 'Italy'\n",
+    "# country = 'Italy'\n",
     "# country = 'Iran'\n",
-    "# country = 'US'\n",
+    "country = 'US'\n",
     "# country = 'United Kingdom'\n",
+    "# country = 'Russia'\n",
     "\n",
     "prov_state = 'Massachusetts'\n",
     "prov_state = 'California'\n",
@@ -541,7 +542,7 @@
     "\n",
     "coeff, params = coeff_evaluate_bestfit(m_series, None)\n",
     "print ('r2  = {0}, days_back = {1}'.format( params['r2'], params['days_back']))\n",
-    "pd.DataFrame({'raw data': params['data'], 'fitted': params['fitted']}).plot(grid = True, title = 'best fit')"
+    "pd.DataFrame({'raw data': params['data'], 'fitted': params['fitted']}).plot(grid = True, title = 'best fit')\n"
    ]
   },
   {
@@ -761,7 +762,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
